0.11.102
	+ Added EBox::Model::Row to ease the management of data returned by models
0.11.101
	+ Bugfix: Fix memory leak in models while cloning types. Now
	cloning is controlled by clone method in types
	+ Bugfix: Union type now checks for its uniqueness
	+ DESTROY is not an autoloaded method anymore
	+ HasOne fields now may set printable value from the foreign field
	to set its value
	+ findId now searchs as well using printableValue
	+ Bugfix. Minor bug found when key is an IP address in autoloaded
	methods
	+ Ordered tables may insert values at the beginning or the end of
	the table by "insertPosition" attribute
	+ Change notConfigured template to fix English and add link to the
	  module status section
	+ Add loading gif to module status actions
	+ Remove debug from ServiceInterface.pm
	+ Add support for custom separators to be used as index separators on
	  exposedMethods
	+ Bugfix. Stop eBox correctly when it's removed
	+ Improve apache-restart to make it more reliable.
0.11.100
	+ Bugfix. Fix issue with event filters and empty hashes
	+ Bugfix. Cache stuff in log and soap watcher to avoid memory leaks
	+ Bugfix. Fix bug that prevented the user from being warned when a row to
	  be deleted is being used by other model
	+ Bugfix. Add missing use of EBox::Global in State event watcher
	+ Added progress screen, now pogress screen keeps track of the changed
	  state of the modules and change the top page element properly
	+ Do not exec() to restart apache outside mod_perl
	+ Improve apache restart script
	+ Improve progress screen 
0.11.99
	+ DataTable contains the property 'enableProperty' to set a column
	called 'enabled' to enable/disable rows from the user point of
	view. The 'enabled' column is put the first
	+ Added state to the RAID report instead of simpler active boolean
        + Fix bug when installing new event components and event GConf
	subtree has not changed
	+ Add RSS dispatcher to show eBox events under a RSS feed